# OneTop

./: .env  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  database.py  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 357569636e89_init_alembic.py  362dc32f791e_init_alembic.py  3ee30d64dd9a_init_alembic.py  4a3275e80944_init_alembic.py  5155a2ea9c74_init_alembic.py  59800a628757_init_alembic.py  5d0a9abc56ac_init_alembic.py  8bb369aa650b_init_alembic.py  a81c60b75b04_init_alembic.py  b7470fa1c3b8_init_alembic.py  b7dd936f602c_init_alembic.py  b7eb56e5ac33_init_alembic.py  baf0ec94038c_init_alembic.py  bc41f47a80c3_init_alembic.py  bc925ca37355_init_alembic.py  c03464011c08_init_alembic.py  d5b141eb864f_init_alembic.py  d64de0e6cd12_init_alembic.py  d6965a3a3862_init_alembic.py  df2266e7b0e2_init_alembic.py  f04b315a5d55_init_alembic.py
backend/apps/: models.py  schemas.py
backend/apps/core/: util.py
backend/apps/repository/: detail.py  home.py  review.py  search.py
backend/apps/routers/: detail.py  home.py  review.py  (+1 more)
backend/recommand/: category_keywords.csv
backend/recommend/: category_keywords.csv  master_embedding.csv
datamigration/: .env  .gitignore  Dockerfile  core.py  database.py  entrypoint.sh  etl_descrip.py  etl_ingredient.py  etl_main.py  etl_product.py  etl_relation.py  pyproject.toml  requirements.txt  util.py
datamigration/ingredient/: master_ingredients.csv  master_ingredients2.csv
(+131 files in other folders)
