[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
PyMySQL = "^1.0.2"
alembic = "^1.7.6"
pandas = "^1.4.1"
python-multipart = "^0.0.5"
passlib = "^1.7.4"
scikit-learn = "^1.0.2"
numpy = "^1.22.3"
SQLAlchemy = "1.4.31"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
