[tool.poetry]
name = "datamigration"
version = "0.1.0"
description = ""
authors = ["none"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.31"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
